; ModuleID = '/home/carl/AnghaBench/git/extr_imap-send.c_imap_close_server.c'
source_filename = "/home/carl/AnghaBench/git/extr_imap-send.c_imap_close_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imap_store = type { %struct.imap* }
%struct.imap = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@.str = private unnamed_addr constant [7 x i8] c"LOGOUT\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imap_store*)* @imap_close_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imap_close_server(%struct.imap_store* %0) #0 {
  %2 = alloca %struct.imap_store*, align 8
  %3 = alloca %struct.imap*, align 8
  store %struct.imap_store* %0, %struct.imap_store** %2, align 8
  %4 = load %struct.imap_store*, %struct.imap_store** %2, align 8
  %5 = getelementptr inbounds %struct.imap_store, %struct.imap_store* %4, i32 0, i32 0
  %6 = load %struct.imap*, %struct.imap** %5, align 8
  store %struct.imap* %6, %struct.imap** %3, align 8
  %7 = load %struct.imap*, %struct.imap** %3, align 8
  %8 = getelementptr inbounds %struct.imap, %struct.imap* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, -1
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load %struct.imap_store*, %struct.imap_store** %2, align 8
  %17 = call i32 @imap_exec(%struct.imap_store* %16, i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.imap*, %struct.imap** %3, align 8
  %19 = getelementptr inbounds %struct.imap, %struct.imap* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = call i32 @socket_shutdown(%struct.TYPE_4__* %20)
  br label %22

22:                                               ; preds = %15, %1
  %23 = load %struct.imap*, %struct.imap** %3, align 8
  %24 = call i32 @free(%struct.imap* %23)
  ret void
}

declare dso_local i32 @imap_exec(%struct.imap_store*, i32*, i8*) #1

declare dso_local i32 @socket_shutdown(%struct.TYPE_4__*) #1

declare dso_local i32 @free(%struct.imap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
